HB-4533: handle stripe errors

--- a/src/styles/modules/_m-payment-form.scss
+++ b/src/styles/modules/_m-payment-form.scss
@@ -45,4 +45,8 @@
   @include element('zip-code') {
     grid-area: zipcode;
   }
+
+  @include element('error-text') {
+    color: color(aorange) !important;
+  }
 }
