--- a/src/styles/modules/_m-vdivider.sass
+++ b/src/styles/modules/_m-vdivider.sass
@@ -1,5 +1,6 @@
 +b(vdivider)
   border-top: 1px solid color(agray, light)
+  margin-bottom: 40px
 
   +m(type-dashed)
     border-top: 1px dashed color(agray, light)
