--- a/src/styles/modules/_m-paragraph.sass
+++ b/src/styles/modules/_m-paragraph.sass
@@ -5,6 +5,9 @@ $sizes: ( xxxs: $font-size-xxxs, xxs: $font-size-xxs, xs: $font-size-xs, s: $fon
   font-weight: normal
   margin-bottom: 40px
 
+    a
+      font-weight: bold
+
   @each $size, $token in $sizes
     +m(size-#{$size})
       +rem-fallback('font-size', $token)
