New FieldGroup element

--- a/src/styles/modules/_index.scss
+++ b/src/styles/modules/_index.scss
@@ -2,6 +2,7 @@
 @import 'm-checkbox';
 @import 'm-dropdown';
 @import 'm-fields';
+@import 'm-fieldgroup';
 @import 'm-headings';
 @import 'm-textlink';
 @import 'm-modal';
