New sycalls and searchForm pattern

--- a/src/styles/modules/_index.scss
+++ b/src/styles/modules/_index.scss
@@ -12,6 +12,7 @@
 @import 'm-paragraph';
 @import 'm-radio-buttons';
 @import 'm-radio-group-box';
+@import 'm-search-form';
 @import 'm-status-list';
 @import 'm-textarea';
 @import 'm-tooltip';
