Updated SearchForm pattern and Dropdown element

--- a/src/styles/modules/_m-dropdown.sass
+++ b/src/styles/modules/_m-dropdown.sass
@@ -109,3 +109,14 @@
       +reset
       width: 14px
       height: 18px
+
+  +m(small)
+
+    .#{$prefix-component}text-field__slot--right
+      margin-top: -8px
+
+    .#{$prefix-component}dropdown__list
+      margin-top: -14px
+
+    .#{$prefix-component}dropdown__list-item
+      padding: 10px 15px
