--- a/src/styles/modules/_m-search-form.sass
+++ b/src/styles/modules/_m-search-form.sass
@@ -43,5 +43,5 @@
 
   section
 
-    > div
+    .#{$prefix-component}text-field__container, .#{$prefix-component}checkbox
       margin-bottom: 10px
