HB-4487: eslint fixes

--- a/src/styles/modules/_index.scss
+++ b/src/styles/modules/_index.scss
@@ -10,6 +10,7 @@
 @import 'm-npa-signup-search-filters';
 @import 'm-offers-form';
 @import 'm-paragraph';
+@import 'm-pet-card';
 @import 'm-radio-buttons';
 @import 'm-radio-group-box';
 @import 'm-search-form';
