HB-4487: PetCard and SearchForm fixes

--- a/src/styles/modules/_m-dropdown.sass
+++ b/src/styles/modules/_m-dropdown.sass
@@ -120,3 +120,6 @@
 
     .#{$prefix-component}dropdown__list-item
       padding: 10px 15px
+
+    input:not(:active)
+      border: 1px solid color(agray, light)
