--- a/src/styles/modules/_m-search-form.sass
+++ b/src/styles/modules/_m-search-form.sass
@@ -45,3 +45,6 @@
 
     .#{$prefix-component}text-field__container, .#{$prefix-component}checkbox
       margin-bottom: 10px
+
+  button.submit
+    margin-top: 20px
