HB-4533: error message for invalid card

--- a/src/styles/modules/_m-payment-form.scss
+++ b/src/styles/modules/_m-payment-form.scss
@@ -12,6 +12,20 @@
     grid-column-gap: 10px;
     grid-row-gap: 20px;
 
+    @include modifier('card-errors') {
+      color: color(agray, darker);
+      display: grid;
+      grid-template-areas:
+        'firstname firstname'
+        'lastname lastname'
+        'zipcode zipcode'
+        'cardnumber cardnumber'
+        'errors errors'
+        'cardexpiry cardcvc';
+      grid-column-gap: 10px;
+      grid-row-gap: 20px;
+    }
+
     @include breakpoint(tablet-plus) {
       grid-template-areas:
         'firstname lastname'
@@ -19,11 +33,27 @@
         'cardnumber cardnumber'
         'cardexpiry cardcvc';
       grid-column-gap: 20px;
+
+      @include modifier('card-errors') {
+        grid-template-areas:
+          'firstname lastname'
+          'zipcode zipcode'
+          'cardnumber cardnumber'
+          'errors errors'
+          'cardexpiry cardcvc';
+        grid-column-gap: 20px;
+      }
     }
+
   }
 
   @include element('card-number') {
     grid-area: cardnumber;
+  }
+
+  @include element('card-errors') {
+    grid-area: errors;
+    color: color(aorange);
   }
 
   @include element('card-expiry') {
