HB-4533: correct error text color

--- a/src/styles/modules/_m-payment-form.scss
+++ b/src/styles/modules/_m-payment-form.scss
@@ -26,6 +26,35 @@
       grid-row-gap: 20px;
     }
 
+    @include modifier('payment-error') {
+      color: color(agray, darker);
+      display: grid;
+      grid-template-areas:
+        'firstname firstname'
+        'lastname lastname'
+        'zipcode zipcode'
+        'cardnumber cardnumber'
+        'cardexpiry cardcvc'
+        'paymenterror paymenterror';
+      grid-column-gap: 10px;
+      grid-row-gap: 20px;
+    }
+
+    @include modifier('multiple-errors') {
+      color: color(agray, darker);
+      display: grid;
+      grid-template-areas:
+        'firstname firstname'
+        'lastname lastname'
+        'zipcode zipcode'
+        'cardnumber cardnumber'
+        'errors errors'
+        'cardexpiry cardcvc'
+        'paymenterror paymenterror';
+      grid-column-gap: 10px;
+      grid-row-gap: 20px;
+    }
+
     @include breakpoint(tablet-plus) {
       grid-template-areas:
         'firstname lastname'
@@ -43,6 +72,29 @@
           'cardexpiry cardcvc';
         grid-column-gap: 20px;
       }
+
+      @include modifier('payment-error') {
+        grid-template-areas:
+          'firstname lastname'
+          'zipcode zipcode'
+          'cardnumber cardnumber'
+          'cardexpiry cardcvc'
+          'paymenterror paymenterror';
+        grid-column-gap: 20px;
+      }
+
+      @include modifier('multiple-errors') {
+        grid-template-areas:
+          'firstname lastname'
+          'zipcode zipcode'
+          'cardnumber cardnumber'
+          'errors errors'
+          'cardexpiry cardcvc'
+          'paymenterror paymenterror';
+        grid-column-gap: 20px;
+      }
+
+
     }
 
   }
@@ -77,6 +129,10 @@
   }
 
   @include element('error-text') {
+    grid-area: paymenterror;
+  }
+
+  @include element('text-orange') {
     color: color(aorange) !important;
   }
 }
