HB-4641: Update alert text and label font size

--- a/src/styles/modules/_m-radio-group-box.sass
+++ b/src/styles/modules/_m-radio-group-box.sass
@@ -119,7 +119,7 @@
     +modifier('blue')
       color: color(awhite)
 
-    .bold
+    +modifier('heading')
       font-weight: bold
 
   +element('outside')
