--- a/src/styles/modules/_index.scss
+++ b/src/styles/modules/_index.scss
@@ -11,6 +11,7 @@
 @import 'm-paragraph';
 @import 'm-radio-buttons';
 @import 'm-radio-group-box';
+@import 'm-slider';
 @import 'm-status-list';
 @import 'm-textarea';
 @import 'm-tooltip';
