HB-4641: update heading color for not selected

--- a/src/styles/modules/_m-radio-group-box.sass
+++ b/src/styles/modules/_m-radio-group-box.sass
@@ -170,5 +170,8 @@
       .#{$prefix-component}radio-box__label
         color: color(agray, lighter)
 
+      .#{$prefix-component}radio-box__label--heading
+        color: color(agray, lighter)
+
       .#{$prefix-component}radio-box__outside
         border: 2px solid color(agray, lighter)
