Reduced API calls for default SearchForm

--- a/src/styles/modules/_m-pet-card.sass
+++ b/src/styles/modules/_m-pet-card.sass
@@ -6,7 +6,7 @@
   display: grid
   grid-template-columns: 124px auto
 
-  +breakpoint(tablet)
+  +breakpoint(normal)
     display: block
 
   a
@@ -46,7 +46,7 @@
     height: 100%
     top: 0
 
-    +breakpoint(tablet)
+    +breakpoint(normal)
       margin-left: 0
 
     h4
