Applied truncating to text in PetCard

--- a/src/styles/modules/_m-pet-card.sass
+++ b/src/styles/modules/_m-pet-card.sass
@@ -52,11 +52,17 @@
     h4
       margin-bottom: 10px
       word-break: break-all
+      white-space: nowrap
+      overflow: hidden
+      text-overflow: ellipsis
 
     p
       font-weight: 300
       line-height: 20px
       margin: 0
+      white-space: nowrap
+      overflow: hidden
+      text-overflow: ellipsis
 
       .orange
         color: #FF8F43
