--- a/src/styles/modules/_index.scss
+++ b/src/styles/modules/_index.scss
@@ -1,6 +1,7 @@
 @import 'm-button';
 @import 'm-checkbox';
 @import 'm-dropdown';
+@import 'm-dropdown-group';
 @import 'm-fields';
 @import 'm-fieldgroup';
 @import 'm-headings';
