--- a/src/styles/modules/_index.scss
+++ b/src/styles/modules/_index.scss
@@ -11,6 +11,7 @@
 @import 'm-offers-form';
 @import 'm-paragraph';
 @import 'm-pet-card';
+@import 'm-popup';
 @import 'm-radio-buttons';
 @import 'm-radio-group-box';
 @import 'm-search-form';
