Style fix for popup element

--- a/src/styles/modules/_m-popup.sass
+++ b/src/styles/modules/_m-popup.sass
@@ -41,6 +41,6 @@
     // Set the width on bubble-container acts like max-width normally would
     // (it's different because the bubble is positioned `absolute`)
     // +rem-fallback('width', $width-tooltip)
-    +rem-fallback('left', -($width-tooltip / 2))
+    // +rem-fallback('left', -($width-tooltip / 2))
     +rem-fallback('bottom', $space-xl)
     position: absolute
