HB-4883: syntax fixes for new components from Singularity

--- a/src/patterns/PasswordForgot/passwordForgot.sass
+++ b/src/patterns/PasswordForgot/passwordForgot.sass
@@ -1,13 +1,11 @@
-@import '~/assets/sass'
-
 .h1
-  @include breakpoint(tablet-wide)
+  +breakpoint(tablet-plus)
     text-align: center
 
 .grid
   display: grid
 
-  @include breakpoint(tablet-wide)
+  +breakpoint(tablet-plus)
     grid-template-columns: 65% 35%
     margin: 0 8%
 
