--- a/src/patterns/PasswordForgot/passwordForgot.sass
+++ b/src/patterns/PasswordForgot/passwordForgot.sass
@@ -1,11 +1,11 @@
 .h1
-  +breakpoint(tablet-plus)
+  +breakpoint(tablet-wide)
     text-align: center
 
 .grid
   display: grid
 
-  +breakpoint(tablet-plus)
+  +breakpoint(tablet-wide)
     grid-template-columns: 65% 35%
     margin: 0 8%
 
