--- a/src/styles/modules/_index.scss
+++ b/src/styles/modules/_index.scss
@@ -4,7 +4,7 @@
 @import 'm-fields';
 @import 'm-fieldgroup';
 @import 'm-headings';
-// @import 'm-login-form';
+@import 'm-login-form';
 @import 'm-textlink';
 @import 'm-modal';
 @import 'm-modal-back';
