--- a/src/styles/modules/_m-fieldgroup.sass
+++ b/src/styles/modules/_m-fieldgroup.sass
@@ -1,6 +1,6 @@
 +b(field-group)
 
-  +breakpoint(normal)
+  +breakpoint(tablet)
     display: flex
 
   .#{$prefix-component}button
@@ -9,7 +9,7 @@
   > div, > button
     margin-bottom: $space-xxs
 
-    +breakpoint(normal)
+    +breakpoint(tablet)
       width: 100%
       border-radius: 0
       margin-bottom: 0
