--- a/src/styles/modules/_m-headings.sass
+++ b/src/styles/modules/_m-headings.sass
@@ -8,7 +8,7 @@
     +rem-fallback('letter-spacing', $letter-spacing-xs)
     +rem-fallback('margin-bottom', 20px)
 
-    +breakpoint(tablet-plus)
+    +breakpoint(tablet-wide)
       +rem-fallback('font-size', $font-size-xxl)
       +rem-fallback('line-height', $line-height-h1)
 
@@ -32,7 +32,7 @@
     +rem-fallback('letter-spacing', $letter-spacing-s)
     +rem-fallback('margin-bottom', 20px)
 
-    @include breakpoint(tablet-plus)
+    @include breakpoint(phone-wide)
       font-size: $font-size-xl
       line-height: $line-height-h2
 
@@ -56,7 +56,7 @@
     +rem-fallback('letter-spacing', $letter-spacing-s)
     +rem-fallback('margin-bottom', 20px)
 
-    @include breakpoint(tablet-plus)
+    @include breakpoint(phone-wide)
       font-size: $font-size-l
       line-height: $line-height-h3
 
