--- a/src/styles/modules/_m-npa-signup-search-filters.sass
+++ b/src/styles/modules/_m-npa-signup-search-filters.sass
@@ -4,17 +4,17 @@
     +rem-fallback('grid-row-gap', 20px)
     grid-template-columns: 100%
 
-    +breakpoint(tablet-plus)
+    +breakpoint(tablet-wide)
       grid-template-columns: 49% 48%
       +rem-fallback('grid-column-gap', 24px)
 
   +e(title)
-    +breakpoint(tablet-plus)
+    +breakpoint(tablet-wide)
       text-align: center
 
   +e(save-close)
     +rem-fallback('margin', 30px 0 20px)
 
-    +breakpoint(tablet-plus)
+    +breakpoint(tablet-wide)
       +rem-fallback('width', 367px)
       +rem-fallback('margin', 40px auto)
