--- a/src/styles/modules/_m-pet-card.sass
+++ b/src/styles/modules/_m-pet-card.sass
@@ -6,7 +6,7 @@
   display: grid
   grid-template-columns: 124px auto
 
-  +breakpoint(normal)
+  +breakpoint(tablet)
     display: block
 
   a
@@ -48,7 +48,7 @@
     overflow: hidden
     text-overflow: ellipsis
 
-    +breakpoint(normal)
+    +breakpoint(tablet)
       margin-left: 0
 
     h4
