--- a/src/styles/modules/_m-radio-group-box.sass
+++ b/src/styles/modules/_m-radio-group-box.sass
@@ -5,7 +5,7 @@
   padding: 0
   width: 100%
 
-  +breakpoint(tablet-plus)
+  +breakpoint(tablet-wide)
     +rem-fallback('grid-column-gap', 25px)
 
   +element('item')
