--- a/src/styles/modules/_m-textarea.sass
+++ b/src/styles/modules/_m-textarea.sass
@@ -68,8 +68,8 @@
     position: relative
     width: 100%
 
-    +breakpoint(phone-plus)
+    +breakpoint(tablet-wide)
       +rem-fallback('height', 280px)
 
-    +breakpoint(normal)
+    +breakpoint(tablet)
       +rem-fallback('height', 240px)
