--- a/src/styles/modules/_m-textlink.sass
+++ b/src/styles/modules/_m-textlink.sass
@@ -9,7 +9,7 @@
   +m(color-blue)
     color: color(ablue)
 
-    +breakpoint(wide)
+    +breakpoint(desktop)
       &:hover
         text-decoration: underline
         color: color(ablue)
@@ -21,7 +21,7 @@
   +m(color-gray-light)
     color: color(agray, light)
 
-    +breakpoint(wide)
+    +breakpoint(desktop)
       &:hover
         text-decoration: underline
         color: color(ablue)
