--- a/src/styles/modules/_m-user-survey.sass
+++ b/src/styles/modules/_m-user-survey.sass
@@ -4,14 +4,14 @@
     +rem-fallback('row-gap', $space-xs)
     display: grid
 
-    +breakpoint(tablet-plus)
+    +breakpoint(tablet-wide)
       grid-template-columns: 1fr 1fr
 
   +e('haspets-checkboxes')
     +rem-fallback('row-gap', $space-xxs)
     display: grid
 
-    +breakpoint(tablet-plus)
+    +breakpoint(tablet-wide)
       +rem-fallback('row-gap', $space-s)
       grid-template-columns: 1fr 1fr
 
