--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -12,6 +12,7 @@
 
 @import "./base";
 @import "./functions";
+@import "./grid";
 @import "./mixins";
 @import "./spacing";
 @import "./font-faces";
