--- a/src/styles/modules/_m-login-form.sass
+++ b/src/styles/modules/_m-login-form.sass
@@ -1,50 +1,41 @@
 +b('login-form')
 
-  section.confirmation
-    +breakpoint(tablet-plus)
-      display: grid
-      grid-template-columns: 50% 50%
+  h1
+    +breakpoint(tablet-wide)
+      text-align: center
 
-  .wrapper
-    @include breakpoint(normal)
-      display: grid
-      grid-template-columns: auto
+  .buttons, .inputs
+    display: grid
+    grid-template-columns: auto
+    grid-gap: 20px 20px
 
-      .container
-        grid-area: 1 / 1 / 1 / 1
-
-    .buttons, .inputs
+    @include breakpoint(tablet)
       display: grid
-      grid-template-columns: auto
+      grid-template-columns: 1fr 1fr
       grid-gap: 20px 20px
 
-      @include breakpoint(normal)
+      .inputs
         display: grid
-        grid-template-columns: 1fr 1fr
-        grid-gap: 20px 20px
+        grid-template-columns: auto auto
+        grid-gap: $space-m $space-m
 
-        .inputs
-          display: grid
-          grid-template-columns: auto auto
-          grid-gap: $space-m $space-m
+      .confirmation
+        display: grid
+        grid-template-columns: auto auto
+        grid-gap: $space-m $space-m
 
-        .confirmation
-          display: grid
-          grid-template-columns: auto auto
-          grid-gap: $space-m $space-m
+  .or-divider
+    position: relative
+    text-align: center
+    margin-bottom: 0
 
-    .or-divider
+    &::after
+      background-color: #fff
+      content: attr(data-content)
+      display: inline-block
+      font-size: 16px
+      font-size: 22px
+      font-weight: 300
+      padding: 0 .6em
       position: relative
-      text-align: center
-      margin-bottom: 0
-
-      &::after
-        background-color: #fff
-        content: attr(data-content)
-        display: inline-block
-        font-size: 16px
-        font-size: 22px
-        font-weight: 300
-        padding: 0 .6em
-        position: relative
-        top: -.85em
+      top: -.85em
