--- a/src/styles/modules/_m-password-forgot.sass
+++ b/src/styles/modules/_m-password-forgot.sass
@@ -1,14 +1,14 @@
 +b(password-forgot)
+
   .h1
-    +breakpoint(tablet-plus)
+    +breakpoint(tablet-wide)
       text-align: center
 
   .grid
     display: grid
 
-    +breakpoint(tablet-plus)
+    +breakpoint(tablet-wide)
       grid-template-columns: 65% 35%
-      margin: 0 8%
 
       > div:nth-child(1)
         padding-right: 50px
