--- a/src/styles/modules/_m-table-of-contents.sass
+++ b/src/styles/modules/_m-table-of-contents.sass
@@ -1,18 +1,22 @@
 +b('table-of-contents')
-  display: grid
-  +rem-fallback('grid-column-gap', 5px)
+  // display: grid
+  // +rem-fallback('grid-column-gap', 5px)
   list-style-type: none
   padding: 0
   width: 100%
 
-  li
-    font-weight: $weight-light
-    padding: 15px 0
-  +breakpoint(tablet-plus)
+  nav
 
-  .#{$prefix-component}textlink
-    color: $color-rich-black
+    +breakpoint(tablet-plus)
+      column-count: 3
 
-    &:hover
-      color: $color-primary-blue
-      text-decoration: none
+    li
+      font-weight: $weight-light
+      padding: 15px 0
+
+    .#{$prefix-component}textlink
+      color: $color-rich-black
+
+      &:hover
+        color: $color-primary-blue
+        text-decoration: none
