HB-4883: fixed grid class names

--- a/src/styles/_grid.sass
+++ b/src/styles/_grid.sass
@@ -12,7 +12,7 @@
 .d-inherit
   display: inherit
 
-@include breakpoint(phone)
++breakpoint(phone)
   .d-phone-none
     display: none
   .d-phone-inline
@@ -24,7 +24,7 @@
   .d-phone-inherit
     display: inherit
 
-@include breakpoint(phone-wide)
++breakpoint(phone-wide)
   .d-phone-wide-none
     display: none
   .d-phone-wide-inline
@@ -36,7 +36,7 @@
   .d-phone-wide-inherit
     display: inherit
 
-@include breakpoint(tablet)
++breakpoint(tablet)
   .d-tablet-none
     display: none
   .d-tablet-inline
@@ -48,7 +48,7 @@
   .d-tablet-inherit
     display: inherit
 
-@include breakpoint(phone-wide)
++breakpoint(tablet-wide)
   .d-tablet-wide-none
     display: none
   .d-tablet-wide-inline
@@ -60,7 +60,7 @@
   .d-tablet-wide-inherit
     display: inherit
 
-@include breakpoint(desktop)
++breakpoint(desktop)
   .d-tablet-none
     display: none
   .d-desktop-inline
