--- a/src/styles/modules/_m-radio-group-box.sass
+++ b/src/styles/modules/_m-radio-group-box.sass
@@ -176,6 +176,21 @@
       .#{$prefix-component}radio-box__outside
         border: 2px solid color(agray, lighter)
 
+    &.is-error
+      border: 1px solid color(aorange)
+      .#{$prefix-component}radio-box__button
+        &:hover ~ .#{$prefix-component}radio-box__outside
+          border: 2px solid color(ablue, base)
+
+          &.#{$prefix-component}radio-box__outside--color-blue
+            border: 2px solid color(awhite, base)
+
+            &::before
+              background: color(awhite, base)
+
+      .#{$prefix-component}radio-box__outside
+        border: 2px solid color(aorange)
+
   +e(error-msg)
     +rem-fallback(font-size, $font-size-xs)
     +rem-fallback(line-height, $line-height-h5v2)
