hotfix: styling accordion element

--- a/src/styles/modules/_m-accordion.sass
+++ b/src/styles/modules/_m-accordion.sass
@@ -15,6 +15,7 @@
         padding: $space-xxs 0 $space-xxs
 
   div.header
+    display: flex
     font-weight: bold
     font-size: $font-size-m
     line-height: $line-height-h4
