--- a/src/styles/modules/_m-dropdown.sass
+++ b/src/styles/modules/_m-dropdown.sass
@@ -23,6 +23,10 @@
       opacity: 1
       visibility: visible
 
+  +is(with-events)
+    .#{_b(dropdown) + _e(arrow)}
+      pointer-events: auto !important;
+
   +m(native)
     select
       +reset
