HB-4981: Remove semicolon and important from dropdown scss

--- a/src/styles/modules/_m-dropdown.sass
+++ b/src/styles/modules/_m-dropdown.sass
@@ -25,7 +25,7 @@
 
   +is(with-events)
     .#{_b(dropdown) + _e(arrow)}
-      pointer-events: auto !important;
+      pointer-events: auto
 
   +m(native)
     select
