HB-4998: Set fill for apple-pay icon, set margin for quick-pay parent

--- a/src/styles/modules/_m-payment-form.scss
+++ b/src/styles/modules/_m-payment-form.scss
@@ -38,6 +38,10 @@
     }
   }
 
+  @include element('quick-pay-box') {
+    margin-top: 30px;
+  }
+
   @include element('payment-request-button') {
     background-color: black;
     vertical-align: text-bottom;
